--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   package_info_plus: any
   group_radio_button: any
   loading_overlay: any
+  firebase_core: any
+  firebase_crashlytics: any
+  firebase_analytics: any
+  firebase_auth: any
 
 dev_dependencies:
   flutter_test:
@@ -74,8 +78,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
+    - i18n/ar.json
+    - i18n/en.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
