--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: any
   image_picker: any
   image: any
+  flutter_datetime_picker: any
   flutter_localizations:
     sdk: flutter
   dotted_border: any
